change build.gradle to link to App, add bootstrap css to layout, add form to index to receive inputs for word and defintion.

--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,9 @@
 apply plugin: 'java'
 apply plugin: 'application'
 
-archivesBaseName = "hello-world"
+archivesBaseName = "dictionary"
 version = '1.0'
-mainClassName = "HelloWorld"
+mainClassName = "App"
 
 repositories {
  mavenCentral()
